correct processing of rand() in subqueries with static tables (BUG#2645)

mysql-test/r/subselect.result:
  test of execution plan of subqueries with static tables and rand()
mysql-test/t/subselect.test:
  test of execution plan of subqueries with static tables and rand()
sql/item_func.cc:
  use normal Item_func mechanism to report used tables
sql/item_func.h:
  use normal Item_func mechanism to report used tables
sql/sql_select.cc:
  correct processing of rand() in subqueries with static tables